--- a/Train Tickets Server/package.json
+++ b/Train Tickets Server/package.json
@@ -10,7 +10,10 @@
     "request": "^2.64.0",
     "sqlite3": "^3.1.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-nodemon": "^0.4.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
