--- a/Train Tickets Server/package.json
+++ b/Train Tickets Server/package.json
@@ -12,7 +12,8 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-nodemon": "^0.4.0"
+    "grunt-nodemon": "^0.4.0",
+    "grunt-serve": "^0.1.6"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
