--- a/Train Tickets Server/package.json
+++ b/Train Tickets Server/package.json
@@ -4,6 +4,7 @@
   "description": "Server for train app",
   "main": "app.js",
   "dependencies": {
+    "async": "^1.4.2",
     "body-parser": "^1.14.1",
     "connect": "^3.4.0",
     "express": "^4.13.3",
