--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jrnfaria/CMOVTrainTicketsServer.git"
+  },
   "keywords": [
     "train",
     "ticket",
