--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.14.1",
     "connect": "^3.4.0",
     "express": "^4.13.3",
+    "node-rsa": "^0.2.26",
     "request": "^2.64.0",
     "sqlite3": "^3.1.0"
   },
